adicionando configurações ortograficas

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 			                    <li class="smooth-menu"><a href="#skills">skills</a></li>
 			                    <li class="smooth-menu"><a href="#experience">experiencia</a></li>
 			                    <li class="smooth-menu"><a href="#profiles">profile</a></li>
-			                    <li class="smooth-menu"><a href="#portfolio">portfolio</a></li>
+			                    <li class="smooth-menu"><a href="#portfolio">portifolio</a></li>
 			                    <li class="smooth-menu"><a href="#clients">clientes</a></li>
 			                    <li class="smooth-menu"><a href="#contact">Contato</a></li>
 			                </ul><!--/.nav -->
@@ -106,7 +106,7 @@
 						<div class="header-text">
 							<h2 class="intro-inicio" >Olá <span>,</span> meu nome é <br> Vinicius Barbosa <span>.</span>   </h2>
 
-							<p>Desenvolvedro Full-Stack Java</p>
+							<p>Desenvolvedor Full-Stack Java</p>
 							<a href="assets/download/currículo.pdf" download>download CV</a>
 
 
@@ -132,8 +132,8 @@
 				<li>  <p>Angular  </p> <img src="././assets/images/icons-stack/angular.png"></li>
 				<li>  <p>Css  </p> <img src="././assets/images/icons-stack/docker.png"></li>
 				<li>  <p>React  </p> <img src="././assets/images/icons-stack/react.png"></li>
-				<li>  <p>Angular  </p> <img src="././assets/images/icons-stack/sql.png"></li>
-				<li>  <p>Angular  </p> <img src="././assets/images/icons-stack/postgre.png"></li>
+				<li>  <p>sql/PL-SQL  </p> <img src="././assets/images/icons-stack/sql.png"></li>
+				<li>  <p>potgreSql  </p> <img src="././assets/images/icons-stack/postgre.png"></li>
 			</ul>
 		</div>
 		<!--about start -->
