--- a/index.html
+++ b/index.html
@@ -414,7 +414,8 @@
 		</section><!--/.skills-->
 		<!--skills end -->
 
-		<!--experience start - > Experiencia -->
+<!--		O problema de estouro está aque resolvido-->
+
 		<section id="experience" class="experience">
 			<div class="section-heading text-center">
 				<h2 style="color: black;"># experiencia...</h2>
@@ -498,6 +499,7 @@
 		</section><!--/.experience-->
 		<!--experience end -->
 
+<!--		esta aque o problema exatamente aque resolvido class => ROW-->
 		<!--profiles start -->
 		<section id="profiles" class="profiles">
 			<div class="profiles-details">
@@ -507,7 +509,8 @@
 				<div class="container">
 
 					<div class="profiles-content">
-						<div class="row">
+<!--						ROW aque-->
+						<div class="">
 
 							<div class="col-sm-3">
 								<div class="single-profile">
@@ -523,8 +526,6 @@
 									</div>
 								</div>
 							</div>
-
-
 
 							<div class="col-sm-3">
 								<div class="single-profile profile-no-border">
@@ -550,6 +551,15 @@
 
 		</section><!--/.profiles-->
 		<!--profiles end -->
+
+
+
+
+
+
+
+
+
 
 		<!--portfolio start -->
 		<section id="portfolio" class="portfolio">
