atualizando botoes com animações

--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
 		</section><!--/.welcome-hero-->
 		<!--welcome-hero end -->
 		<div class="stacks">
-			<ul>
+			<ul class="header-stacks">
 
 				<li>  <p>Java</p>  <img src="././assets/images/icons-stack/java.png"></li>
 				<li>  <p>SpringBoot </p> <img src="././assets/images/icons-stack/springboot.png"> </li>
