atualizando e retirando menus itens

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 			                    <li class="smooth-menu"><a href="#experience">experiencia</a></li>
 			                    <li class="smooth-menu"><a href="#profiles">profile</a></li>
 			                    <li class="smooth-menu"><a href="#portfolio">portifolio</a></li>
-			                    <li class="smooth-menu"><a href="#clients">clientes</a></li>
+<!--			                    <li class="smooth-menu"><a href="#clients">clientes</a></li>-->
 			                    <li class="smooth-menu"><a href="#contact">Contato</a></li>
 			                </ul><!--/.nav -->
 			            </div><!-- /.navbar-collapse -->
