--- a/index.html
+++ b/index.html
@@ -700,26 +700,26 @@
 										<div class="row">
 											<div class="col-sm-6 col-xs-12">
 												<div class="form-group">
-													<input type="text" class="form-control" id="name" placeholder="Nome*" name="name" required>
+													<input type="text" class="form-control" id="name" placeholder="Nome*" name="name" required="required">
 												</div><!--/.form-group-->
 											</div><!--/.col-->
 											<div class="col-sm-6 col-xs-12">
 												<div class="form-group">
-													<input type="email" class="form-control" id="email" placeholder="Email*" name="email" required>
+													<input type="email" class="form-control" id="email" placeholder="Email*" name="email" required="required">
 												</div><!--/.form-group-->
 											</div><!--/.col-->
 										</div><!--/.row-->
 										<div class="row">
 											<div class="col-sm-12">
 												<div class="form-group">
-													<input type="text" class="form-control" id="subject" placeholder="Tema" name="subject">
+													<input type="text" class="form-control" id="subject" placeholder="Tema" name="subject" required="required">
 												</div><!--/.form-group-->
 											</div><!--/.col-->
 										</div><!--/.row-->
 										<div class="row">
 											<div class="col-sm-12">
 												<div class="form-group">
-													<textarea class="form-control" rows="8" id="comment" placeholder="Mensagem" name="comment"></textarea>
+													<textarea class="form-control" rows="8" id="comment" placeholder="Mensagem" name="comment" required="required"></textarea>
 												</div><!--/.form-group-->
 											</div><!--/.col-->
 										</div><!--/.row-->
