--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
 		<section id="about" class="about">
 
 			<div class="section-heading text-center">
-				<h2 style="color: black;"># Sobre min...</h2>
+				<h2 style="color: black;"># Sobre mim...</h2>
 			</div>
 			<div class="container">
 				<div class="about-content">
