--- a/index.html
+++ b/index.html
@@ -232,7 +232,7 @@
 										</h4>
 										<h5>Brasil, Pernambuco, Recife</h5>
 										<p class="description">
-											Se especializando em graduação a distancia e especializando afincamente na tecnologia!
+											Se especializando afincamente na tecnologia!
 										</p>
 									</div><!--/.timeline-content-->
 								</div><!--/.timeline-->
